<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/flImagePager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/progress_dialog_width"
                android:layout_gravity="top">

                <com.redmart.redmart.widgets.ViewPagerCustomDuration
                    android:id="@+id/vpImagePager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="@string/transition_product_details" />

                <ImageView
                    android:id="@+id/ivNoImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/no_image"
                    android:contentDescription="@string/image_content_description"
                    android:scaleType="fitXY"
                    android:visibility="gone" />
            </FrameLayout>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/cpiCircleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cpi_height"
                app:ci_height="@dimen/default_circle_indicator_radius"
                app:ci_width="@dimen/default_circle_indicator_radius"
                app:ci_drawable="@drawable/cpi_selected"
                app:ci_drawable_unselected="@drawable/cpi_normal"
                android:layout_gravity="bottom|center_horizontal"
                android:padding="@dimen/padding_15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_10dp">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_1"
                    card_view:cardCornerRadius="@dimen/corner_radius_row_image">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_10dp"
                        android:orientation="vertical">

                        <com.redmart.redmart.widgets.CustomTextView
                            android:id="@+id/textview_title"
                            style="@style/ProductTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/app_name" />

                        <com.redmart.redmart.widgets.CustomTextView
                            android:id="@+id/textview_weight"
                            style="@style/ProductDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/app_name" />

                        <com.redmart.redmart.widgets.CustomTextView
                            android:id="@+id/textview_price"
                            style="@style/ProductTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/padding_10dp"
                            android:maxLines="1"
                            android:textSize="@dimen/text_size_toolbar" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:layout_marginLeft="@dimen/margin_1"
                    android:layout_marginRight="@dimen/margin_1"
                    android:layout_marginTop="@dimen/padding_10dp"
                    card_view:cardCornerRadius="@dimen/corner_radius_row_image">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_10dp"
                        android:orientation="vertical">

                        <com.redmart.redmart.widgets.CustomTextView
                            style="@style/ProductDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/country_origin" />

                        <com.redmart.redmart.widgets.CustomTextView
                            android:id="@+id/textview_country_origin"
                            style="@style/ProductDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/app_name"
                            android:textColor="@android:color/black" />

                        <com.redmart.redmart.widgets.CustomTextView
                            style="@style/ProductDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/padding_15dp"
                            android:singleLine="false"
                            android:text="@string/about_product" />

                        <com.redmart.redmart.widgets.CustomTextView
                            android:id="@+id/textview_product_description"
                            style="@style/ProductDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/app_name"
                            android:textColor="@android:color/black" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
